api: add protocolVersion to /gopher endpoint
